# LangChain-Chatbot-and-Agents

02-f1-bot/: pyproject.toml
02-f1-bot/src/f1_bot/: __init__.py  chatbot.py  data-processing.py  retrievel.py
03-pdf_chatbot/: .env  pyproject.toml
03-pdf_chatbot/src/pdf_chatbot/: __init__.py  chatbot.py  data_processing.py  retriever_chain.py
04-findify/: main.py
04-findify/backend/: main.py
04-findify/backend/db/: connection.py
04-findify/backend/routes/: chat.py
04-findify/backend/services/: gemini_chain.py  vector_store.py
04-findify/data/: data_insertion.py
04-healix/: main.py
04-healix/backend/: requirements.txt
04-healix/backend/routes/: upload_pdfs.py
05-findify/: pyproject.toml
05-findify/backend/routes/: products.py
05-findify/embeddings/: sync_pinecone.py
05-findify/frontend/: app.py
05-healix/: README.md  pyproject.toml
05-healix/backend/: main.py
05-healix/backend/middlewares/: exception_handlers.py
05-healix/backend/modules/: llm.py  load_vectorstore.py  pdf_handlers.py
05-healix/backend/routes/: ask_question.py
05-healix/frontend/: app.py
05-healix/frontend/components/: chatUI.py  history_download.py  upload.py
06-documind/: README.MD
07-medicore/: README.MD
08-soniciq/: README.MD
