[project]
name = "f1-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "abdulrehman104", email = "abdulrehman104+abdulrehman104@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-google-genai>=2.1.5",
    "langchain-qdrant>=0.2.0",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.3",
    "streamlit>=1.46.0",
]

[project.scripts]
f1-bot = "f1_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
